--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "amani"
+name = "amanibhavam"
 version = "0.1.0"
 description = ""
 authors = ["Amanibhavam <iam@defn.sh>"]
@@ -15,7 +15,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-hello = "amani.cli:main"
+hello = "amanibhavam.cli:main"
 
 [tool.isort]
 profile = "black"
